updated code for bugs
