# dev-performance-analytics/common/types.go
@@ -1,0 +1,7 @@
+// common/types.go
+package common
+
+// ErrorResponse represents the error response structure
+type ErrorResponse struct {
+    Message string `json:"message"`
+}
